Attempt #2 at fixing iPhone 4 spacing issue.

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ body {
 }
 
 .social a {
-	width: 30%;
+	display: block;
 }
 
 .mystory {
